--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,11 @@
     <title>Home</title>
 
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css" th:href="@{bootstrap/css/bootstrap.css}">
+    <!--<link rel="stylesheet" href="../static/bootstrap/css/bootstrapValidator.min.css" th:href="@{bootstrap/css/bootstrapValidator.min.css}">-->
 
     <script src="../static/js/jquery-3.3.1.js" th:src="@{js/jquery-3.3.1.js}"></script>
     <script src="../static/bootstrap/js/bootstrap.js" th:src="@{bootstrap/js/bootstrap.js}"></script>
-
+    <!--<script src="../static/bootstrap/js/bootstrapValidator.min.js" th:src="@{bootstrap/js/bootstrapValidator.min.js}"></script>-->
 </head>
 <body class="text-center">
 <div class="modal-dialog" style="margin-top: 10%;">
@@ -27,6 +28,7 @@
                     <option name="teacher" value="teacher">老师</option>
                     <option name="" value="student">学生</option>
                     <option value="admin">管理员</option>
+                    <option value="resident">居民</option>
                 </select>
             </div>
         </div>
@@ -35,7 +37,7 @@
                 <button type="button" class="btn btn-primary form-control" onclick="login()">登录</button>
             </div>
             <div class="form-group">
-                <a href="reg"> <button type="button" class="btn btn-default form-control" onclick="register()">注册</button></a>
+                <a href="register"> <button type="button" class="btn btn-default form-control">注册</button></a>
             </div>
 
         </div>
@@ -72,6 +74,15 @@
                             else if (role == "admin") {
                                 location.href="admin";
                             }
+                            else if (role == "resident") {
+                                location.href="resident";
+                            }
+                    }
+                    else if(data == "3"){
+                        location.href="showTeachers";
+                    }
+                    else if (data == "4"){
+                        location.href="showStudents";
                     }
                     else if (data == "0"){
                         alert("用户不存在");
