--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,17 @@
     <title>Home</title>
 
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css" th:href="@{bootstrap/css/bootstrap.css}">
-    <!--<link rel="stylesheet" href="../static/bootstrap/css/bootstrapValidator.min.css" th:href="@{bootstrap/css/bootstrapValidator.min.css}">-->
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrapValidator.min.css" th:href="@{bootstrap/css/bootstrapValidator.min.css}">
 
     <script src="../static/js/jquery-3.3.1.js" th:src="@{js/jquery-3.3.1.js}"></script>
     <script src="../static/bootstrap/js/bootstrap.js" th:src="@{bootstrap/js/bootstrap.js}"></script>
-    <!--<script src="../static/bootstrap/js/bootstrapValidator.min.js" th:src="@{bootstrap/js/bootstrapValidator.min.js}"></script>-->
+    <script src="../static/bootstrap/js/bootstrapValidator.min.js" th:src="@{bootstrap/js/bootstrapValidator.min.js}"></script>
 </head>
 <body class="text-center">
+
 <div class="modal-dialog" style="margin-top: 10%;">
     <div class="modal-content">
+        <form class="form-horizontal" role="form" method="post" id="form">
         <div class="modal-header">
             <h4 class="modal-title text-center" id="myModalLabel">账号登陆</h4>
         </div>
@@ -32,6 +34,7 @@
                 </select>
             </div>
         </div>
+
         <div class="modal-footer">
             <div class="form-group">
                 <button type="button" class="btn btn-primary form-control" onclick="login()">登录</button>
@@ -41,8 +44,12 @@
             </div>
 
         </div>
+    </form>
     </div>
+
 </div>
+
+
 </body>
     <script>
         function login() {
