--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -18,6 +18,7 @@
                     <th class="text-center">出行地</th>
                     <th class="text-center">返回日期</th>
                     <th class="text-center">今日健康状况</th>
+                    <th class="text-center">体温</th>
                     <th class="text-center">其它说明</th>
                 </tr>
             </thead>
@@ -62,9 +63,10 @@
                     for (var i = 0; i <data.length ; i++) {
                         tr += '<tr>\n' +
                             '                    <td class="text-center">'+data[i].time+'</td>\n' +
-                            '                    <td class="text-center">'+data[i].travel+'</td>\n' +
+                            '                    <td class="text-center">'+data[i].place+'</td>\n' +
                             '                    <td class="text-center">'+data[i].backTime+'</td>\n' +
                             '                    <td class="text-center">'+data[i].healthy+'</td>\n' +
+                            '                    <td class="text-center">'+data[i].heat+'</td>\n' +
                             '                    <td class="text-center">'+data[i].remark+'</td>\n' +
                             '                </tr>';
                     }
